--- a/admin.html
+++ b/admin.html
@@ -1,154 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stories Admin ✏️</title>
+  <meta charset="UTF-8">
+  <title>Story Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Firebase SDKs -->
+</head>
+<body class="bg-gray-100">
+  <div class="container mx-auto px-4 py-6">
+    <h1 class="text-2xl font-bold mb-4">📋 Story Admin</h1>
+    <div id="auth-section" class="mb-6">
+      <button id="sign-in-btn" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Sign in with Google</button>
+      <button id="sign-out-btn" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded ml-2 hidden">Sign out</button>
+    </div>
+
+    <div id="admin-interface" class="hidden bg-white p-6 rounded shadow">
+      <p class="mb-4">Upload a full story JSON file to add or update a story.</p>
+
+      <div class="mb-4">
+        <label for="story-id" class="block font-semibold mb-1">Story ID (doc name):</label>
+        <input id="story-id" type="text" placeholder="e.g. mssa-mayhem" class="border px-3 py-2 rounded w-full"/>
+      </div>
+
+      <div class="mb-4">
+        <label for="story-file" class="block font-semibold mb-1">Story JSON File:</label>
+        <input id="story-file" type="file" accept=".json" class="w-full"/>
+      </div>
+
+      <button id="upload-btn" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">Upload Story</button>
+      <p id="status-msg" class="mt-4"></p>
+    </div>
+  </div>
+
   <script type="module">
-	// Import the functions you need from the SDKs you need
-	import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-	import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-analytics.js";
-	import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-    import { getFirestore, doc, setDoc, getDocs, collection } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js';
+    import {
+      getAuth, signInWithPopup, GoogleAuthProvider,
+      onAuthStateChanged, signOut
+    } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js';
+    import {
+      getFirestore, doc, getDoc, setDoc, serverTimestamp
+    } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
 
-	// TODO: Add SDKs for Firebase products that you want to use
-	// https://firebase.google.com/docs/web/setup#available-libraries
+    // TODO: replace with your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyClEgpGrVTXT2zQNNDBDg0TNX2F24k6oTg",
+      authDomain: "urushka99.firebaseapp.com",
+      projectId: "urushka99",
+      storageBucket: "urushka99.firebasestorage.app",
+      messagingSenderId: "954120822793",
+      appId: "1:954120822793:web:6c316b1b178081b56758d8",
+      measurementId: "G-5LCB9E7PL9"
+    };
 
-	// Your web app's Firebase configuration
-	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-	const firebaseConfig = {
-	apiKey: "AIzaSyClEgpGrVTXT2zQNNDBDg0TNX2F24k6oTg",
-	authDomain: "urushka99.firebaseapp.com",
-	projectId: "urushka99",
-	storageBucket: "urushka99.firebasestorage.app",
-	messagingSenderId: "954120822793",
-	appId: "1:954120822793:web:6c316b1b178081b56758d8",
-	measurementId: "G-5LCB9E7PL9"
-	};
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-    const provider = new GoogleAuthProvider();
 
-    // UI elements
-    const loginBtn = document.getElementById('login-btn');
-    const logoutBtn = document.getElementById('logout-btn');
-    const form = document.getElementById('story-form');
-    const status = document.getElementById('status');
-    const storyList = document.getElementById('existing-stories');
+    const signInBtn = document.getElementById('sign-in-btn');
+    const signOutBtn = document.getElementById('sign-out-btn');
+    const adminInterface = document.getElementById('admin-interface');
+    const statusMsg = document.getElementById('status-msg');
 
-    // Auth state observer
+    signInBtn.onclick = () => {
+      const provider = new GoogleAuthProvider();
+      signInWithPopup(auth, provider).catch(err => {
+        console.error(err);
+        statusMsg.textContent = 'Login failed: ' + err.message;
+        statusMsg.className = 'text-red-600 mt-2';
+      });
+    };
+
+    signOutBtn.onclick = () => {
+      signOut(auth);
+    };
+
     onAuthStateChanged(auth, user => {
       if (user) {
-        status.textContent = `Signed in as ${user.email}`;
-        loginBtn.classList.add('hidden');
-        logoutBtn.classList.remove('hidden');
-        form.classList.remove('hidden');
-        loadExistingStories();
+        // Show admin interface
+        signInBtn.classList.add('hidden');
+        signOutBtn.classList.remove('hidden');
+        adminInterface.classList.remove('hidden');
       } else {
-        status.textContent = 'Not signed in';
-        loginBtn.classList.remove('hidden');
-        logoutBtn.classList.add('hidden');
-        form.classList.add('hidden');
-        storyList.innerHTML = '';
+        signInBtn.classList.remove('hidden');
+        signOutBtn.classList.add('hidden');
+        adminInterface.classList.add('hidden');
       }
     });
 
-    // Sign in
-    loginBtn.addEventListener('click', async () => {
-      try {
-        await signInWithPopup(auth, provider);
-      } catch (e) {
-        alert('Login failed: ' + e.message);
-      }
-    });
-    // Sign out
-    logoutBtn.addEventListener('click', () => signOut(auth));
-
-    // Handle form submit
-    form.addEventListener('submit', async e => {
-      e.preventDefault();
-      const id = document.getElementById('story-id').value.trim();
-      const title = document.getElementById('story-title').value.trim();
-      const scenarios = JSON.parse(document.getElementById('story-scenarios').value);
-      const drugInfo = JSON.parse(document.getElementById('story-druginfo').value);
-      if (!id || !title) {
-        alert('Story ID and Title are required.');
+    document.getElementById('upload-btn').onclick = async () => {
+      const storyId = document.getElementById('story-id').value.trim();
+      const fileInput = document.getElementById('story-file');
+      statusMsg.textContent = '';
+      if (!storyId) {
+        statusMsg.textContent = 'Please enter a Story ID.';
+        statusMsg.className = 'text-red-600';
         return;
       }
-      try {
-        await setDoc(doc(db, 'stories', id), { title, scenarios, drugInfo });
-        alert(`Saved story '${id}' successfully.`);
-        loadExistingStories();
-      } catch (err) {
-        alert('Save failed: ' + err.message);
+      if (!fileInput.files.length) {
+        statusMsg.textContent = 'Please select a JSON file.';
+        statusMsg.className = 'text-red-600';
+        return;
       }
-    });
 
-    // Load existing story IDs
-    async function loadExistingStories() {
-      storyList.innerHTML = '<li>Loading...</li>';
-      try {
-        const snap = await getDocs(collection(db, 'stories'));
-        storyList.innerHTML = '';
-        snap.forEach(docSnap => {
-          const li = document.createElement('li');
-          li.textContent = `${docSnap.id}: ${docSnap.data().title}`;
-          storyList.append(li);
-        });
-      } catch (err) {
-        storyList.innerHTML = `<li class="text-red-600">Error loading: ${err.message}</li>`;
-      }
-    }
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+      reader.onload = async (e) => {
+        try {
+          const json = JSON.parse(e.target.result);
+          // Add timestamps
+          const docRef = doc(db, 'stories', storyId);
+          // Check if doc exists, preserve createdAt
+          const snap = await getDoc(docRef);
+          const data = {
+            ...json,
+            updatedAt: serverTimestamp(),
+            createdAt: snap.exists() ? snap.data().createdAt : serverTimestamp()
+          };
+          await setDoc(docRef, data);
+          statusMsg.textContent = 'Story "' + storyId + '" uploaded successfully.';
+          statusMsg.className = 'text-green-600 mt-2';
+        } catch (err) {
+          console.error(err);
+          statusMsg.textContent = 'Error parsing or uploading JSON: ' + err.message;
+          statusMsg.className = 'text-red-600 mt-2';
+        }
+      };
+      reader.readAsText(file);
+    };
   </script>
-</head>
-<body class="bg-gray-50 min-h-screen flex flex-col">
-  <header class="bg-blue-600 text-white p-4">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-semibold">Stories Admin</h1>
-      <div>
-        <button id="login-btn" class="bg-white text-blue-600 px-4 py-2 rounded shadow hover:bg-gray-100">Sign in</button>
-        <button id="logout-btn" class="hidden bg-red-500 px-4 py-2 rounded shadow hover:bg-red-600">Sign out</button>
-      </div>
-    </div>
-  </header>
-  <main class="container mx-auto flex-1 p-6">
-    <p id="status" class="mb-4 text-gray-700"></p>
-    <section>
-      <h2 class="text-lg font-semibold mb-2">Existing Stories</h2>
-      <ul id="existing-stories" class="list-disc pl-5 mb-6"></ul>
-    </section>
-    <section>
-      <h2 class="text-lg font-semibold mb-2">Add / Edit Story</h2>
-      <form id="story-form" class="space-y-4 hidden">
-        <div>
-          <label for="story-id" class="block text-gray-700">Story ID (unique)</label>
-          <input id="story-id" required class="mt-1 block w-full border border-gray-300 rounded px-3 py-2" />
-        </div>
-        <div>
-          <label for="story-title" class="block text-gray-700">Title</label>
-          <input id="story-title" required class="mt-1 block w-full border border-gray-300 rounded px-3 py-2" />
-        </div>
-        <div>
-          <label for="story-scenarios" class="block text-gray-700">Scenarios JSON</label>
-          <textarea id="story-scenarios" rows="10" class="mt-1 block w-full border border-gray-300 rounded px-3 py-2 font-mono text-sm"></textarea>
-        </div>
-        <div>
-          <label for="story-druginfo" class="block text-gray-700">DrugInfo JSON</label>
-          <textarea id="story-druginfo" rows="10" class="mt-1 block w-full border border-gray-300 rounded px-3 py-2 font-mono text-sm"></textarea>
-        </div>
-        <button type="submit" class="bg-green-500 text-white px-6 py-2 rounded shadow hover:bg-green-600">Save Story</button>
-      </form>
-    </section>
-  </main>
-  <footer class="bg-gray-200 p-4 text-center text-sm text-gray-600">
-    © 2025 Your App
-  </footer>
 </body>
 </html>
