--- a/story.html
+++ b/story.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Story Engine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
