fix name to be taken from title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           const li = document.createElement('li');
           const a  = document.createElement('a');
           a.href = `story.html?story=${encodeURIComponent(id)}`;
-          a.textContent = data.name;
+          a.textContent = data.title;
           a.className = 'block bg-white shadow hover:shadow-md rounded-lg px-5 py-4 text-lg sm:text-xl text-blue-600 hover:text-blue-700 transition';
           li.append(a);
           ul.append(li);
