improve admin page

--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,14 @@
         </div>
 
         <div id="admin-interface" class="hidden bg-white p-6 rounded shadow space-y-4">
+            <!-- Existing stories selector -->
+            <div>
+                <label for="story-select" class="font-semibold block mb-1">Existing Stories</label>
+                <select id="story-select" class="border px-3 py-2 rounded w-full mb-4">
+                    <option value="">-- Select a story --</option>
+                </select>
+            </div>
+
             <p>Enter the Story ID and paste the full story JSON below:</p>
 
             <div>
@@ -48,7 +56,8 @@
             onAuthStateChanged, signOut
         } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js';
         import {
-            getFirestore, doc, getDoc, setDoc, serverTimestamp
+            getFirestore, doc, getDoc, setDoc, serverTimestamp,
+            collection, getDocs
         } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
 
         // Your Firebase config
@@ -75,6 +84,7 @@
         const uploadBtn = document.getElementById('upload-btn');
         const storyIdInput = document.getElementById('story-id');
         const storyJsonArea = document.getElementById('story-json');
+        const storySelect = document.getElementById('story-select');
 
         // Auth handlers
         signInBtn.onclick = () => {
@@ -93,10 +103,46 @@
                 signInBtn.classList.add('hidden');
                 signOutBtn.classList.remove('hidden');
                 adminInterface.classList.remove('hidden');
+                loadStoryList();
             } else {
                 signInBtn.classList.remove('hidden');
                 signOutBtn.classList.add('hidden');
                 adminInterface.classList.add('hidden');
+            }
+        });
+
+        // Load list of stories into the selector
+        async function loadStoryList() {
+            storySelect.innerHTML = '<option value="">-- Select a story --</option>';
+            try {
+                const snap = await getDocs(collection(db, 'stories'));
+                snap.forEach(docSnap => {
+                    const data = docSnap.data();
+                    const label = data.title || data.name || docSnap.id;
+                    const opt = document.createElement('option');
+                    opt.value = docSnap.id;
+                    opt.textContent = label;
+                    storySelect.append(opt);
+                });
+            } catch (err) {
+                console.error('Failed to load story list:', err);
+            }
+        }
+
+        // When a story is selected, load its JSON into the textarea
+        storySelect.addEventListener('change', async e => {
+            const id = e.target.value;
+            if (!id) return;
+            storyIdInput.value = id;
+            try {
+                const snap = await getDoc(doc(db, 'stories', id));
+                if (snap.exists()) {
+                    storyJsonArea.value = JSON.stringify(snap.data(), null, 2);
+                } else {
+                    storyJsonArea.value = '';
+                }
+            } catch (err) {
+                console.error('Failed to fetch story:', err);
             }
         });
 
@@ -136,6 +182,7 @@
                 await setDoc(docRef, data);
                 statusMsg.textContent = `Story "${storyId}" saved successfully.`;
                 statusMsg.className = 'text-green-600';
+                loadStoryList();
             } catch (err) {
                 console.error(err);
                 statusMsg.textContent = 'Error saving story: ' + err.message;
