added logo to story page

--- a/story.html
+++ b/story.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 relative">
+  <!-- Site Logo -->
+  <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="absolute top-4 right-4 w-28 md:w-36 h-auto">
+
   <div class="container mx-auto px-4 py-6">
     <a href="index.html" class="text-blue-600 hover:underline mb-4 inline-block">← Back to Stories</a>
     <div id="app" class="space-y-6"></div>
