--- a/story.html
+++ b/story.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 relative">
+<body class="bg-gray-100">
   <!-- Site Logo -->
   <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="absolute top-4 right-4 w-28 md:w-36 h-auto">
 
