--- a/story.html
+++ b/story.html
@@ -8,13 +8,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-  <!-- Site Logo -->
-  <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="absolute top-4 right-4 w-28 md:w-36 h-auto">
-
   <div class="container mx-auto px-4 py-6">
-    <a href="index.html" class="text-blue-600 hover:underline mb-4 inline-block">← Back to Stories</a>
-    <div id="app" class="space-y-6"></div>
-  </div>
+    <!-- Header with back-link and logo -->
+    <div class="flex justify-between items-center mb-4">
+      <a href="index.html" class="text-blue-600 hover:underline">← Back to Stories</a>
+      <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="w-24 md:w-32 h-auto" />
+    </div>
 
   <!-- Drug Info Modal -->
   <div id="modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
