--- a/story.html
+++ b/story.html
@@ -15,6 +15,9 @@
       <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="w-24 md:w-32 h-auto" />
     </div>
 
+    <div id="app" class="space-y-6"></div>
+  </div>
+
   <!-- Drug Info Modal -->
   <div id="modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white rounded-lg shadow-xl p-4 w-11/12 max-w-md">
