adding logo to index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 <body class="bg-gray-100">
   <div class="max-w-xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-    <h1 class="text-3xl sm:text-4xl font-bold mb-6 text-center">📖 Story Portal</h1>
+  
+  
+  <div class="flex justify-between items-center mb-4">
+      <h1 class="text-3xl sm:text-4xl font-bold mb-6 text-center">📖 Story Portal</h1>
+      <img src="images/grushkush_logo.png" alt="GrushKush Logo" class="w-24 md:w-32 h-auto" />
+    </div>
+    
     <ul id="story-list" class="space-y-4">
       <!-- story links injected here -->
     </ul>
