--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,18 @@
                 <textarea id="story-json" rows="15" class="border rounded px-3 py-2 font-mono w-full text-sm"></textarea>
             </div>
 
-            <button id="upload-btn" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">Save to Firestore</button>
+            <div class="flex space-x-2">
+                <button id="upload-btn"
+                        class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">
+                    Save Story
+                </button>
+
+                <!-- New Delete button -->
+                <button id="delete-btn"
+                        class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">
+                    Delete Story
+                </button>
+            </div>
             <p id="status-msg" class="mt-2"></p>
 
             <!-- PRESENTATION CONTROLS -->
@@ -58,7 +69,7 @@
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js';
         import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js';
-        import { getFirestore, doc, getDoc, setDoc, serverTimestamp, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
+        import { getFirestore, doc, getDoc, setDoc, deleteDoc, serverTimestamp, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
 
         /* ---------------------------- Firebase ---------------------------- */
         const firebaseConfig = {
@@ -83,6 +94,7 @@
         const storyIdInput = document.getElementById('story-id');
         const storyJsonArea = document.getElementById('story-json');
         const uploadBtn = document.getElementById('upload-btn');
+        const deleteBtn = document.getElementById('delete-btn');  
         const statusMsg = document.getElementById('status-msg');
 
         const presControls = document.getElementById('presentation-controls');
@@ -226,12 +238,12 @@
                 const table = document.createElement('table');
                 table.className = 'table-auto w-full border-collapse';
                 table.innerHTML = `<thead><tr class='bg-gray-50'>
-                        <th class='border px-2 py-1'>ID</th>
-                        <th class='border px-2 py-1'>Name</th>
-                        <th class='border px-2 py-1'>Text</th>
-                        <th class='border px-2 py-1'>Options (JSON)</th>
-                        <th class='border px-2 py-1'>Remove</th>
-                    </tr></thead>`;
+                            <th class='border px-2 py-1'>ID</th>
+                            <th class='border px-2 py-1'>Name</th>
+                            <th class='border px-2 py-1'>Text</th>
+                            <th class='border px-2 py-1'>Options (JSON)</th>
+                            <th class='border px-2 py-1'>Remove</th>
+                        </tr></thead>`;
                 const tbody = document.createElement('tbody');
                 Object.entries(data.scenarios || {}).forEach(([id, sc]) => {
                     const tr = document.createElement('tr');
@@ -254,13 +266,12 @@
                 container.append(table);
 
                 function tdPlain(txt) { const td = document.createElement('td'); td.className = 'border px-2 py-1 text-xs break-all'; td.textContent = txt; return td; }
-                function tdInput(val, on, valClass = '')
-                {
+                function tdInput(val, on, valClass = '') {
                     const td = document.createElement('td'); td.className = `border px-2 py-1 ${valClass}`; const inp = document.createElement('input'); inp.type = 'text'; inp.value = val; inp.className = 'border rounded px-1 py-0.5 w-full'; inp.oninput = () => cb(inp.value); td.append(inp); return td;
+                }
+                function updateField(sid, key, value) { const full = JSON.parse(storyJsonArea.value); full.scenarios[sid][key] = value; storyJsonArea.value = JSON.stringify(full, null, 2); }
             }
-            function updateField(sid, key, value) { const full = JSON.parse(storyJsonArea.value); full.scenarios[sid][key] = value; storyJsonArea.value = JSON.stringify(full, null, 2); }
         }
-            }
 
         /* --------------------- OTHER RENDERERS ------------------------------ */
         function renderSummary(data) {
@@ -332,6 +343,41 @@
             await setDoc(ref, save);
             showStatus(`Story "${id}" saved.`, 'text-green-600'); loadStories();
         };
+        /* ------------------------- DELETE ----------------------------------- */
+        // ---------- Delete Story ----------
+        deleteBtn.onclick = async () => {
+            const id = storySelect.value.trim();
+            if (!id) {
+                alert('Please select a story first.');
+                return;
+            }
+
+            // 1) Confirm with the user
+            const sure = confirm(`Delete story "${id}" permanently?`);
+            if (!sure) return;
+
+            try {
+                // 2) Remove from Firestore
+                await deleteDoc(doc(db, 'stories', id));
+
+                // 3) Update UI + feedback
+                showStatus(`Story "${id}" deleted.`, 'text-green-600');
+
+                // Clear form
+                storyIdInput.value = '';
+                storyJsonArea.value = '';
+                storySelect.value = '';
+
+                // Hide presentation pane
+                hidePresentation();
+
+                // Refresh the drop-down list
+                loadStories();
+            } catch (e) {
+                showStatus(e.message, 'text-red-600');
+            }
+        };
+
     </script>
 </body>
 </html>
