support Family field in drug info

--- a/story.html
+++ b/story.html
@@ -86,6 +86,7 @@
         document.getElementById('modal-content').innerHTML =
           `<strong>${title}</strong>
            <ul class="list-disc ml-5">
+		     <li><strong>Family:</strong> ${info.Family || ''}</li>
              <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
              <li><strong>PK:</strong> ${info.PK}</li>
              <li><strong>Toxicities:</strong> ${info.Toxicities}</li>
